Update Dockerfile for backend and db

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,9 @@
+FROM gradle:8.7.0-jdk21 as build
+WORKDIR /app
+COPY . .
+RUN gradle clean build --no-daemon -x test --warning-mode all
+
 FROM eclipse-temurin:21
-
 RUN mkdir /opt/app
-
-COPY ./build/libs/myproject-0.0.1-SNAPSHOT.jar /opt/app
-
+COPY --from=build /app/build/libs/myproject-0.0.1-SNAPSHOT.jar /opt/app
 CMD ["java", "-jar", "/opt/app/myproject-0.0.1-SNAPSHOT.jar"]
