--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,3 +1,12 @@
-FROM nginx:1.25.4-alpine3.18
+FROM node:20.14.0-alpine3.20 AS build
+WORKDIR /app
+COPY package*.json .
+RUN npm install
+COPY . .
+RUN npm run build
 
-COPY ./dist /usr/share/nginx/html
+FROM nginx:1.25.4-alpine3.18
+COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY --from=build /app/dist /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
