--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,5 +8,6 @@ RUN npm run build
 FROM nginx:1.25.4-alpine3.18
 COPY ./nginx.conf /etc/nginx/nginx.conf
 COPY --from=build /app/dist /usr/share/nginx/html
+COPY --from=build /app/nginx.conf /etc/nginx
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
